fixed static code issues added tests removed ant build